Do not exif-rotate face thumbnails twice. Clean up an unused parameter in ThumbnailCreator.

BUG: 313190
FIXED-IN: 3.2.0